# yLab

./: README.md
Cache/: CMakeLists.txt  README.md  lfu.h  main.cpp
Cache/.history/: CMakeLists_20211011170833.txt  CMakeLists_20211011170845.txt  belady_20211011165545.h  belady_20211011165642.h  belady_20211011165649.h  belady_20211011165656.h  belady_20211011165702.h  belady_20211011165717.h  belady_20211011165722.h  belady_20211011165729.h  belady_20211011165738.h  belady_20211011165746.h  belady_20211011165755.h  belady_20211011165807.h  belady_20211011165809.h  belady_20211011165815.h  belady_20211011165818.h  lfu_20211011145325.h  lfu_20211011150641.h  lfu_20211011150642.h  lfu_20211011150702.h  lfu_20211011150710.h  lfu_20211011150711.h  lfu_20211011150715.h  lfu_20211011150720.h  lfu_20211011150730.h  lfu_20211011150732.h  lfu_20211011150734.h  lfu_20211011150738.h  lfu_20211011150739.h  lfu_20211011150909.h  lfu_20211011150911.h  lfu_20211011150913.h  lfu_20211011150915.h  lfu_20211011150918.h  lfu_20211011150924.h  lfu_20211011151109.h  lfu_20211011151114.h  lfu_20211011151140.h  lfu_20211011151303.h  (+12 more)
Cache/LFU/: CMakeLists.txt  main.cpp
Cache/belady/: belady.cpp  belady.h
Cache/tests/: test.cpp  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt  testfor1
Chebupi-C-ka/: CMakeLists.txt  Node.hpp  Tree.hpp  driver.cpp  driver.hpp  grammar.y  lexer.l
Matrix/: CMakeLists.txt  README.md
Matrix/lib/: containers.hpp  matrix.hpp
Matrix/src/: main.cpp
Matrix/test/end2end/contest_tests/: test_2.txt  test_3.txt  test_4.txt  test_5.txt
Matrix/test/end2end/my_tests/: eye.txt  from_iters2.txt  test_1.txt  test_2.txt  test_3.txt  test_4.txt  test_5.txt  test_6.txt
Matrix/test/unit_test/: CMakeLists.txt  runner.cpp  test.cpp  test_containers_ctors.cpp  test_matrix_ctors.cpp
Triangles/: CMakeLists.txt  README.md  TODO.txt  intersection.hpp  line.hpp  main.cpp  plane.hpp  triangle.hpp  triangles.hpp  vector.hpp
Triangles/include/common/: common.hpp
Triangles/include/intersection/: intersection.hpp
Triangles/include/primitives/: triangle.hpp  vector.hpp
Triangles/lib/: CMakeLists.txt
Triangles/lib/common/: CMakeLists.txt  common.cpp
Triangles/lib/intersection/: CMakeLists.txt  intersection.cpp
Triangles/lib/intersection/include/: intersection.hpp
Triangles/lib/intersection/src/: intersection.cpp
Triangles/lib/octree/: CMakeLists.txt  octree.hpp
Triangles/lib/octree/include/: octree.hpp
Triangles/lib/primitives/: CMakeLists.txt  triangle.cpp  vector.cpp
Triangles/lib/primitives/include/: out  plane.hpp  test.cpp  triangle.hpp  vector.hpp
Triangles/lib/primitives/src/: triangle.cpp  vector.cpp
Triangles/src/: main.cpp
Triangles/test/: CMakeLists.txt
Triangles/test/end2end/: test_1.txt  test_2.txt  test_3.txt  test_4.txt  test_5.txt  test_6.txt  test_7.txt  test_8.txt
Triangles/test/end2end/answers/: ans_3.txt  ans_6.txt  ans_7.txt
Triangles/test/unit_tests/: CMakeLists.txt  runner.cpp  test_degenerates.cpp  test_intersection2D_normal.cpp  test_intersection3D_normal.cpp  test_two_degenerates.cpp
